[package]
name = "todo"
version = "0.1.0"
edition = "2021"
description = "TODO CLI App"
authors = ["Keisuke Toyota <hm.pudding0715@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
dirs = "4.0.0"
seahorse = "2.1.0"
cli-table = "0.4"